--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 
-add_subdirectory(bfsshortreach)
-add_subdirectory(dijkstrashortreach)
-add_subdirectory(synchronousShopping)
+#add_subdirectory(bfsshortreach)
+#add_subdirectory(dijkstrashortreach)
+add_subdirectory(fibonacci-modified)
+#add_subdirectory(synchronousShopping)
