Complete SparseArray, adding algorithmicCrush

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 
+add_subdirectory(algorithmicCrush)
 #add_subdirectory(bfsshortreach)
 #add_subdirectory(dijkstrashortreach)
-add_subdirectory(fibonacci-modified)
+#add_subdirectory(sparseArrays)
+#add_subdirectory(fibonacci-modified)
 #add_subdirectory(synchronousShopping)
