Solved! Damn! in c++ there is a function called next_permutation, i guess it would have been easy to solve with that in hand!

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,7 +1,8 @@
 
 
-add_subdirectory(algorithmicCrush)
+#add_subdirectory(algorithmicCrush)
 #add_subdirectory(bfsshortreach)
+add_subdirectory(biggerIsGreater)
 #add_subdirectory(dijkstrashortreach)
 #add_subdirectory(sparseArrays)
 #add_subdirectory(fibonacci-modified)
