--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -5,8 +5,9 @@
 #add_subdirectory(bfsshortreach)
 #add_subdirectory(biggerIsGreater)
 #add_subdirectory(dijkstrashortreach)
+add_subdirectory(isBinairySearchTree)
 #add_subdirectory(pairs)
 #add_subdirectory(sparseArrays)
-add_subdirectory(swapNodeAlgo)
+#add_subdirectory(swapNodeAlgo)
 #add_subdirectory(fibonacci-modified)
 #add_subdirectory(synchronousShopping)
